--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ annotated-types==0.7.0
 anyio==4.8.0
 click==8.1.8
 dotenv==0.9.9
-fastapi==0.115.11
+"fastapi[standard]"
 greenlet==3.1.1
 h11==0.14.0
 idna==3.10
