--- a/requirements.txt
+++ b/requirements.txt
@@ -115,6 +115,7 @@ types-python-dateutil==2.9.0.20241206
 typing_extensions==4.12.2
 tzdata==2024.2
 uri-template==1.3.0
+uvicorn==0.24.0
 urllib3==2.2.3
 wcwidth==0.2.13
 webcolors==24.11.1
