--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -5,4 +5,4 @@ aptPkgs = ["python3-pip", "python3-dev", "build-essential"]
 cmds = ["python -m pip install --upgrade pip", "pip install -r requirements.txt"]
 
 [start]
-cmd = "uvicorn main:app --host 0.0.0.0 --port $PORT"
+cmd = "uvicorn app.main:app --host 0.0.0.0 --port $PORT"
