--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@radix-ui/react-toggle-group": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.1.6",
     "@types/pdfjs-dist": "^2.10.377",
+    "@next/swc":"latest",
     "autoprefixer": "^10.4.20",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -50,7 +51,7 @@
     "next": "14.2.16",
     "next-themes": "^0.4.4",
     "pdfjs-dist": "^4.10.38",
-    "prisma": "latest",
+    "prisma": "6.4.1",
     "react": "^18",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18",
