--- a/railway.toml
+++ b/railway.toml
@@ -1,9 +1,9 @@
 [build]
-builder = "nixpacks"
-buildCommand = "npm run build"
+builder = "DOCKERFILE"
+dockerfilePath = "Dockerfile"
 
 [deploy]
-startCommand = "npm run start"
+startCommand = "node server.js"
 healthcheckPath = "/"
 healthcheckTimeout = 100
 
