--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
   "devDependencies": {
     "@types/node": "^22",
     "@types/react": "^18",
+    "@types/prop-types":"^15.7.14",
     "@types/react-dom": "^18",
     "postcss": "^8",
     "tailwindcss": "^3.4.17",
