--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint",
     "postinstall": "prisma generate"
   },
+  "prisma": {
+    "schema": "./prisma/schema.prisma"
+  },
   "dependencies": {
     "@prisma/client": "^6.4.1",
     "@radix-ui/react-avatar": "^1.0.4",
@@ -18,15 +21,15 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-toast": "^1.1.5",
-    "picomatch": "latest",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "date-fns": "^3.3.1",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.331.0",
-    "next": "14.1.0",
+    "next": "^14.2.24",
     "nodemailer": "^6.9.9",
+    "picomatch": "latest",
     "react": "^18.2.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.2.0",
