--- a/package.json
+++ b/package.json
@@ -1,60 +1,64 @@
-{
-  "name": "signonsite-platform",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "prisma generate && next build",
-    "start": "next start",
-    "lint": "next lint",
-    "postinstall": "prisma generate"
-  },
-  "dependencies": {
-    "@prisma/client": "^5.10.2",
-    "@radix-ui/react-avatar": "^1.0.4",
-    "@radix-ui/react-dropdown-menu": "^2.0.6",
-    "@radix-ui/react-label": "^2.0.2",
-    "@radix-ui/react-select": "^2.0.0",
-    "@radix-ui/react-slot": "^1.0.2",
-    "@radix-ui/react-tabs": "^1.0.4",
-    "@radix-ui/react-toast": "^1.1.5",
-    "bcryptjs": "^2.4.3",
-    "class-variance-authority": "^0.7.0",
-    "clsx": "^2.1.0",
-    "date-fns": "^3.6.0",
-    "jsonwebtoken": "^9.0.2",
-    "lucide-react": "^0.331.0",
-    "next": "14.1.0",
-    "nodemailer": "^6.9.9",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-day-picker": "^8.10.1",
-    "tailwind-merge": "^2.2.1",
-    "tailwindcss-animate": "^1.0.7",
-    "next-themes": "^0.2.1",
-    "@radix-ui/react-separator": "^1.0.3",
-    "@radix-ui/react-dialog": "^1.0.5",
-    "@radix-ui/react-tooltip": "^1.0.7"
-  },
-  "devDependencies": {
-    "@types/bcryptjs": "^2.4.6",
-    "@types/jsonwebtoken": "^9.0.5",
-    "@types/node": "^20",
-    "@types/nodemailer": "^6.4.14",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "autoprefixer": "^10.4.18",
-    "eslint": "^8.57.0",
-    "eslint-config-next": "14.1.0",
-    "postcss": "^8.4.35",
-    "tailwindcss": "^3.4.1",
-    "@tailwindcss/forms": "^0.5.7",
-    "prisma": "^5.10.2",
-    "typescript": "^5"
-  },
-  "resolutions": {
-    "glob": "^10.0.0",
-    "rimraf": "^5.0.0"
+  {
+    "name": "signonsite-platform",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+      "dev": "next dev",
+      "build": "prisma generate && next build",
+      "start": "next start",
+      "lint": "next lint",
+      "postinstall": "prisma generate"
+    },
+    "prisma": {
+    "schema": "./prisma/schema.prisma"
+    },
+    "dependencies": {
+      "@prisma/client": "^6.4.1",
+      "@radix-ui/react-avatar": "^1.0.4",
+      "@radix-ui/react-dropdown-menu": "^2.0.6",
+      "@radix-ui/react-label": "^2.0.2",
+      "@radix-ui/react-select": "^2.0.0",
+      "@radix-ui/react-slot": "^1.0.2",
+      "@radix-ui/react-tabs": "^1.0.4",
+      "@radix-ui/react-toast": "^1.1.5",
+      "bcryptjs": "^2.4.3",
+      "class-variance-authority": "^0.7.0",
+      "clsx": "^2.1.0",
+      "date-fns": "^3.6.0",
+      "jsonwebtoken": "^9.0.2",
+      "lucide-react": "^0.331.0",
+      "next": "14.1.0",
+      "nodemailer": "^6.9.9",
+      "react": "^18.2.0",
+      "react-dom": "^18.2.0",
+      "react-day-picker": "^8.10.1",
+      "tailwind-merge": "^2.2.1",
+      "tailwindcss-animate": "^1.0.7",
+      "next-themes": "^0.2.1",
+      "@radix-ui/react-separator": "^1.0.3",
+      "@radix-ui/react-dialog": "^1.0.5",
+      "@radix-ui/react-tooltip": "^1.0.7"
+    },
+    "devDependencies": {
+      "@types/bcryptjs": "^2.4.6",
+      "@types/jsonwebtoken": "^9.0.5",
+      "@types/node": "^20",
+      "@types/nodemailer": "^6.4.14",
+      "@types/react": "^18",
+      "@types/react-dom": "^18",
+      "autoprefixer": "^10.4.18",
+      "eslint": "^8.57.0",
+      "eslint-config-next": "14.1.0",
+      "postcss": "^8.4.35",
+      "tailwindcss": "^3.4.1",
+      "@tailwindcss/forms": "^0.5.7",
+      "prisma": "^6.4.1",
+      "typescript": "^5"
+    },
+    "resolutions": {
+      "glob": "^10.0.0",
+      "rimraf": "^5.0.0"
+    }
   }
-}
-
+  
+  
