--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
     "schema": "./prisma/schema.prisma"
     },
     "dependencies": {
-      "@next/swc-linux-x64-gnu": "^14.1.0",
-      "@next/swc-linux-x64-musl": "^14.1.0",
+      "@next/swc-linux-x64-gnu": "latest",
       "@prisma/client": "^6.4.1",
       "@radix-ui/react-avatar": "^1.0.4",
       "@radix-ui/react-dropdown-menu": "^2.0.6",
